--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
     <title>Sample Netlify Website</title>
   </head>
   <body>
-    <p>This is a sample site that doesn't serve much of a purpose.</p>
+    <p>This is a sample site that doesn't serve much of a purpose. No, really.</p>
   </body>
 </html>
