--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <p>This is a sample site that doesn't serve much of a purpose. No, really.</p>
+    <p>Promise.</p>
   </body>
 </html>
