--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   <body>
     <p>This is a sample site that doesn't serve much of a purpose. No, really.</p>
     <p>No, really.</p>
-    <p>Test.</p>
+    <p>Test. Yes.</p>
   </body>
 </html>
