--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-
 <!doctype html>
 <html>
   <head>
-    <title>Sample Netlify Website</title>
+    <title>Personal GitHub Analytics</title>
   </head>
   <body>
-    <p>This is a sample site that doesn't serve much of a purpose. No, really.</p>
-    <p>No, really.</p>
-    <p>Test. Yes.</p>
+    <h1>Personal GitHub Analytics</h1>
+    <p>This site uses <a href="https://ntl.fyi/api-auth">API Authentication in Netlify</a> to visualize personal GitHub analytics.</p>
+    <p>Graphs are produced with <a href="https://d3js.org/">d3.js</a></p>
   </body>
 </html>
