Some changes to the app

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Personal GitHub Analytics</title>
-  </head>
-  <body>
-    <h1>Personal GitHub Analytics</h1>
-    <p>This site uses <a href="https://ntl.fyi/api-auth">API Authentication in Netlify</a> to visualize personal GitHub analytics.</p>
-    <p>Graphs are produced with <a href="https://d3js.org/">d3.js</a></p>
-  </body>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<title>Personal GitHub Analytics</title>
+</head>
+
+<body>
+	<div id="app"></div>
+	<!-- built files will be auto injected -->
+</body>
+
 </html>
